--- a/packages/@react-aria/overlays/package.json
+++ b/packages/@react-aria/overlays/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.2",
+    "@react-aria/focus": "^3.6.1",
     "@react-aria/i18n": "^3.4.1",
     "@react-aria/interactions": "^3.9.1",
     "@react-aria/ssr": "^3.2.0",
